fixing menu and dark mode

--- a/base.css
+++ b/base.css
@@ -11,5 +11,6 @@
 body
 {
     min-height: 100vh;
+    min-width: 100vw;
     background: #eee;
 }
